testsuite/tests/rename/should_fail/T5001b.stderr

T5001b.hs:10:17: error:
    The INLINE pragma for ‘genum’ lacks an accompanying binding
    Suggested fix:
      Move the INLINE pragma to the declaration site of ‘genum’.
